--- a/frames_per_second/Assembly-CSharp.csproj
+++ b/frames_per_second/Assembly-CSharp.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\FPSCounter.cs" />
+     <Compile Include="Assets\Scripts\FPSDisplay.cs" />
      <Compile Include="Assets\Scripts\Nucleon.cs" />
      <Compile Include="Assets\Scripts\NucleonSpawner.cs" />
      <None Include="Assets\Materials\Wispy Sky\ReadMe.txt" />
